--- a/src/containers/Login.css
+++ b/src/containers/Login.css
@@ -1,3 +1,9 @@
+.Login form a {
+  margin-bottom: 15px;
+  display: block;
+  font-size: 14px;
+}
+
 @media all and (min-width: 480px) {
   .Login {
     padding: 60px 0;
